Fixed name of ansible task group

--- a/ansible_scripts/vpNator-wireguard.yml
+++ b/ansible_scripts/vpNator-wireguard.yml
@@ -276,7 +276,7 @@
       tags: [ install ]
 
     # ****************** MOUNT **********************
-    - name: === Install ===
+    - name: === Start ===
       block:
         - name: Start localhost wireguard interface
           become: true
