Fix 'eth*' not caught in OVPN iptables rule

--- a/ansible_scripts/vpNator-ovpn.yml
+++ b/ansible_scripts/vpNator-ovpn.yml
@@ -77,7 +77,7 @@
       - name: Remove IP Table rule for NAT
         become: true
         become_method: sudo
-        command: iptables -t nat -D POSTROUTING -o en+ -j MASQUERADE
+        command: iptables -t nat -D POSTROUTING -o e+ -j MASQUERADE
         ignore_errors: true
 
         #- name: Uninstall additional tools
