Changed the games targeted by the QoS

--- a/ansible_scripts/templates/fireqos_vpn.conf
+++ b/ansible_scripts/templates/fireqos_vpn.conf
@@ -9,6 +9,8 @@ overwatch_udp=5060,5062,6250,3478:3479,12000:64000
 overwatch_tcp=1119,3724,6113
 rocket_tcp=1935,3478:3480
 rocket_udp=3074,3478:3479,7000:9000
+valorant_tcp=2099,5222,5223,8088,8393:8440,8446
+valorant_udp=7000:8000,8088,8180,8181
 
 interface $DEVICE down output rate $SPEED 
 	class games commit 40% qdisc sfq
@@ -16,8 +18,10 @@ interface $DEVICE down output rate $SPEED
 		match udp sports $lol_udp
 		match tcp sports $steam_tcp
 		match udp sports $steam_udp
-		match tcp sports $overwatch_tcp
-		match udp sports $overwatch_udp
+		match tcp sports $rocket_tcp
+		match udp sports $rocket_udp
+		match tcp sports $valorant_tcp
+		match udp sports $valorant_udp
 	class management commit 30kpbs qdisc pfifo
 		match tcp sport 22
 	class default commit 40% qdisc sfq
@@ -35,8 +39,10 @@ interface $DEVICE up input rate $SPEED
 		match udp dports $lol_udp
 		match tcp dports $steam_tcp
 		match udp dports $steam_udp
-		match udp sports $overwatch_udp
-		match tcp sports $overwatch_tcp
+		match tcp sports $rocket_tcp
+		match udp sports $rocket_udp
+		match tcp sports $valorant_tcp
+		match udp sports $valorant_udp
 	class web commit 10% qdisc sfq
 		match udp dport 53
 		match tcp dport 443
