--- a/ansible_scripts/templates/fireqos_vpn.conf
+++ b/ansible_scripts/templates/fireqos_vpn.conf
@@ -1,7 +1,9 @@
 DEVICE=tun0
 SPEED=150mbit
 
-lol_tcp=2099,5222,5223,8393:8400
+#lol without patcher
+lol_tcp=2099,5222,5223
+#lol_tcp=2099,5222,5223,8393:8400
 lol_udp=5000:5500
 steam_tcp=27014:27050
 steam_udp=27000:27036,4378:4380
@@ -13,7 +15,7 @@ valorant_tcp=2099,5222,5223,8088,8393:8440,8446
 valorant_udp=7000:8000,8088,8180,8181
 
 interface $DEVICE down output rate $SPEED 
-	class games commit 40% qdisc sfq
+	class games commit 20% qdisc sfq
 		match tcp sports $lol_tcp
 		match udp sports $lol_udp
 		match tcp sports $steam_tcp
@@ -24,17 +26,17 @@ interface $DEVICE down output rate $SPEED
 		match udp sports $valorant_udp
 	class management commit 30kpbs qdisc pfifo
 		match tcp sport 22
-	class default commit 40% qdisc sfq
-	class stream commit 5000kbit qdisc sfq
+	class default commit 30% max 40% qdisc sfq
+	class stream commit 24000kbit qdisc sfq
 		match tcp sport 1935
-	class web commit 15% max 40% qdisc sfq
+	class web commit 10% max 25% qdisc sfq
 		match udp sport 53
 		match tcp sport 443
 		match tcp sport 80
 
 
 interface $DEVICE up input rate $SPEED
-	class games commit 35% qdisc sfq
+	class games-lol commit 35% qdisc sfq
 		match tcp dports $lol_tcp
 		match udp dports $lol_udp
 		match tcp dports $steam_tcp
@@ -52,3 +54,10 @@ interface $DEVICE up input rate $SPEED
 	class management commit 30kbps qdisc pfifo
 		match tcp dport 22
 	class default commit 30% max 40% qdisc sfq
+	class web commit 5% qdisc sfq
+		match udp dport 53
+		match tcp dport 443
+		match tcp dport 80 # We have another fucking Epic Game so it uses HTTP and HTTPS
+	# Uncomment if we cannot use the garbage link
+	#class stream commit 24000kbit qdisc sfq
+	#	match tcp dport 1935
